auto-test/tests/chapter_7/invalid_semantics/extra_credit/goto_use_before_declare.c
int main(void) {
    int x = 0;
    if (x != 0) {
        return_y:
        return y; 
    }
    int y = 4;
    goto return_y;
}